--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "assignment-4-backend",
+  "name": "rentaldrives-backend",
   "version": "1.0.0",
-  "description": "Backend API for RentalDrives assignment",
+  "description": "Backend for the RentalDrives project",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "@supabase/supabase-js": "^2.43.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "uuid": "^9.0.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
