--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
