--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "form-data": "^4.0.4",
+    "node-fetch": "^3.3.2",
+    "pdfkit": "^0.17.2",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
