--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.1",
     "styled-components": "^6.1.19"
   },
